fix: (ChampHeader) overflow icons WIP

--- a/src/style/AboutUs.scss
+++ b/src/style/AboutUs.scss
@@ -20,8 +20,6 @@
     padding-top: 450px !important;
     background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgb(0, 0, 0, 1) 80%);
 
-
-
     p {
         margin-bottom: 0px;
     }
@@ -118,6 +116,12 @@
 
         h2 {
             font-size: 24px !important;
+        }
+
+        .header-attributes {
+            max-width: 300px;
+            overflow-x: auto !important;
+            // overflow: visible !important;
         }
     }
 
